Add RemoveMedication feature and update project settings
Added a new `RemoveMedicationPage` with its XAML, code-behind, and `RemoveMedicationViewModel` to support searching and removing medications. Updated `AppShell` to register the new page route. Modified `Colors.xaml` to update the app's color palette. Removed `MedicationHandler.cs` from the build process and added new package references (`CommunityToolkit.Mvvm` and `Microsoft.Extensions.Logging`) in project files. Updated `MauiXaml` configuration to include the new page.

--- a/MedTrackConsole/MedTrackConsole.csproj
+++ b/MedTrackConsole/MedTrackConsole.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\MedicationHandler.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
