Refactor and enhance medication management pages
Refactored and reorganized `AddMedicationPage`, `RemoveMedicationPage`, `ShowMedicationPage`, and introduced a new `EditMedicationPage` for editing medications. Moved pages to a `Pages` namespace for better structure.

Enhanced ViewModels with XML documentation, improved validation logic, and added new commands like `GoToEditCommand` for navigation. Updated `AppShell` routing and registered new pages and ViewModels in `MauiProgram`.

Improved UI with better layouts, added `DatePicker` and `Picker` controls, and introduced `Edit` and `Remove` buttons in medication lists. Fixed routing bugs and cleaned up unused code.

Updated `Medtracker.csproj` to reflect new file paths and added the `EditMedicationPage`. Added comprehensive code documentation for better maintainability.

--- a/Medtracker/Medtracker.csproj
+++ b/Medtracker/Medtracker.csproj
@@ -79,13 +79,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="AddMedicationPage.xaml">
+	  <MauiXaml Update="Pages\AddMedicationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="RemoveMedicationPage.xaml">
+	  <MauiXaml Update="Pages\EditMedicationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="ShowMedicationPage.xaml">
+	  <MauiXaml Update="Pages\RemoveMedicationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\ShowMedicationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
