Modernize UI and refactor ViewModels for maintainability
Redesigned pages with a modern, consistent look:
- Updated layouts for `MainPage`, `AddMedicationPage`, `EditMedicationPage`, `RemoveMedicationPage`, and `ShowMedicationPage`.
- Added back buttons, styled inputs, and improved navigation.

Refactored ViewModels to use `CommunityToolkit.Mvvm`:
- Replaced boilerplate code with `ObservableProperty` and `RelayCommand`.
- Simplified logic in `AddMedicationViewModel`, `EditMedicationViewModel`, `MainPageViewModel`, and `RemoveMedicationViewModel`.

Updated `Medtracker.csproj`:
- Changed `ApplicationId` to `com.angelicadahlqvist.medtracker`.

Improved maintainability, readability, and user experience.

--- a/Medtracker/Medtracker.csproj
+++ b/Medtracker/Medtracker.csproj
@@ -22,7 +22,7 @@
 		<ApplicationTitle>Medtracker</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.medtracker</ApplicationId>
+		<ApplicationId>com.angelicadahlqvist.medtracker</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
