--- a/MedTrackConsole/MedTrackConsole.csproj
+++ b/MedTrackConsole/MedTrackConsole.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <!-- Support both generic net10.0 and the Windows-specific net10.0-windows10.0.19041.0 framework -->
+    <TargetFrameworks>net10.0;net10.0-windows10.0.19041.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
